--- a/assets/sass/layouts/_recipecards.scss
+++ b/assets/sass/layouts/_recipecards.scss
@@ -6,132 +6,40 @@
         @extend %d--flex;
         flex-wrap: wrap;
         justify-content: center;
+        margin-top: 5rem;
     }
 
     &__title {
         grid-column: 1/-1;
         @extend %fw-600;
-        text-transform: uppercase;
+        @extend %txt-uppercase;
         @extend %d--inline-block;
-        margin: 1rem 0 5rem 0;
-        border-radius: 3rem;
-        @extend %pos-rel;
-        @extend %overflow-hidden;
-    }
-
-    &__notifysubtitle {
-        font-size: 1.9rem;
-        background: var(--clr_grd_bg);
-        color: var(--clr_white);
-        @extend %d--flex;
-        flex-direction: column;
-        gap: 2vw;
-        padding: 7rem 6.5rem;
-        border-radius: 6rem;
-        width: 80%;
-        margin: 0 auto;
-        line-height: 1.5;
-        @extend %fw-500;
-        @extend %pos-rel;
-        transition: 0.4s transform $outBack;
-
-        @include device(tab) {
-            width: 90%;
-        }
-        @include device(phone) {
-            padding: 5rem;
-        }
-
-        &:hover,
-        &:focus {
-            transform: translate3d(0, -1rem, 0);
-
-            &::before {
-                transform: translate3d(0, 20%, 0) rotate(180deg);
-            }
-        }
-
-        &::before {
-            @extend %pos-abs;
-            content: '⚠️';
-            bottom: -15%;
-            right: 0%;
-            width: fit-content;
-            font-size: 10rem;
-            z-index: 1;
-            transition: 0.4s transform $inOutBack;
-        }
-
-        p {
-            --bullet_size: 1rem;
-            text-align: left;
-            @extend %pos-rel;
-            margin-left: 3rem;
-
-            &::before {
-                @extend %after;
-                width: var(--bullet_size);
-                height: var(--bullet_size);
-                border-radius: 100%;
-                background: currentColor;
-                top: 50%;
-                left: 0;
-                z-index: 20;
-                transform: translate(-3rem, -50%);
-                opacity: 0.7;
-            }
-
-            @include device(phone) {
-                margin-left: 0;
-                &::before {
-                    display: none;
-                }
-            }
-        }
-
-        a {
-            @extend %pos-rel;
-            @extend %fw-700;
-            color: currentColor;
-
-            &::after {
-                @extend %after;
-                top: 110%;
-                left: 0;
-                background: currentColor;
-                height: 3px;
-                border-radius: 2rem;
-                opacity: 0.8;
-                transform-origin: 100% 50%;
-                transition: 0.3s transform $outSmooth;
-            }
-
-            &:hover::after {
-                transform: scaleX(0);
-            }
-        }
+        margin-top: 1rem;
+        letter-spacing: 1px;
+        color: var(--clr_black_to_accent);
     }
 }
 
 .recipecard {
-    --radius-card: 5.3rem;
     --min-width-recipecard: 24.5rem;
     --max-width-recipecard: 27rem;
 
+    will-change: transform, box-shadow;
     @extend %box-shadow;
     @extend %cursor;
     max-width: var(--max-width-recipecard);
     flex: 1 1 var(--min-width-recipecard);
-    border-radius: var(--radius-card);
+    border-radius: var(--radius-recipecard);
     padding: 2.2vmin;
     margin: 2vw;
-    background: var(--clr_card_bg);
+    background: var(--clr_white_to_grd);
 
     @extend %d--flex;
     flex-direction: column;
     justify-content: space-between;
-    box-shadow: 0 20px 5px -14px transparent;
-    transition: box-shadow 0.5s ease;
+    box-shadow: 0 20px 5px -20px transparent;
+    transform: translateY(0);
+    transition: box-shadow 0.5s $inOutBack, transform 0.8s $outSmooth;
 
     @include device(phone-land) {
         --min-width-recipecard: 22rem;
@@ -142,7 +50,8 @@
 
     &:hover,
     &:focus {
-        box-shadow: 0 20px 5px -14px hsl(var(--clr-black) / 0.1);
+        box-shadow: 0 20px 0px -14px hsl(var(--clr_accent) / 0.1); //TODO mozda staviti u vars jer za dark nam ne treba ovakva shadows
+        transform: translateY(-2%);
 
         .recipecard__img {
             transform: scale(1.2);
@@ -154,7 +63,7 @@
             }
         }
         .recipecard__title {
-            transform: translateY(25%);
+            transform: translateY(30%);
         }
         .recipecard__min {
             svg,
@@ -167,8 +76,12 @@
             }
             svg {
                 opacity: 0.8;
-                stroke: var(--clr_accent);
+                stroke: hsl(var(--clr_accent));
             }
+        }
+
+        .recipecard__footer {
+            transform: translateY(20%);
         }
     }
 
@@ -177,7 +90,7 @@
         @extend %pos-rel;
         width: 100%;
         max-height: 64%;
-        border-radius: calc(var(--radius-card) - 0.8rem);
+        border-radius: calc(var(--radius-recipecard) - 0.8rem);
         margin-bottom: 1rem;
 
         &::after {
@@ -191,6 +104,7 @@
     }
 
     &__img {
+        will-change: transform;
         @extend %img-basic;
         transition: transform 1s $outSmooth;
     }
@@ -204,27 +118,26 @@
         @extend %pos-rel;
         @extend %d--flex;
 
-        color: var(--clr_accent);
-        text-transform: uppercase;
+        color: hsl(var(--clr_accent));
+        @extend %txt-uppercase;
         font-size: 1.2rem;
         @extend %fw-700;
         letter-spacing: 0.5px;
         padding: 0.6rem 0rem;
         width: fit-content;
         margin-bottom: 0.2rem;
-
-        transition: transform 0.5s ease-in-out;
+        transition: transform 0.5s $outSmooth;
 
         &::after {
             @extend %after;
             width: 130%;
-            background: var(--clr_accent_light);
+            background: hsl(var(--clr_accent_light));
             top: 0;
             left: -15%;
-            border-radius: 1rem;
+            border-radius: var(--radius-default);
             transform-origin: 0 50%;
             transform: scaleX(0);
-            transition: transform 0.4s $inOutQuart;
+            transition: transform 0.4s $outSmooth;
             z-index: -1;
         }
     }
@@ -234,93 +147,42 @@
         margin-bottom: 1rem;
         text-transform: capitalize;
         word-wrap: break-word;
-        transition: transform 0.5s;
+        transition: transform 0.5s $outSmooth;
     }
 
     &__footer {
         @extend %flex-jsa;
         transform: translateY(12%);
+        transition: transform 0.5s $outSmooth;
     }
 
     &__min {
         @extend %flex-center;
+
+        p,
+        svg {
+            @extend %will-change;
+            opacity: 0.5;
+            transition: transform 0.6s $outSmooth, opacity 0.4s $outSmooth;
+        }
 
         svg {
             align-self: flex-start;
             width: 1.5rem;
             margin-right: 1rem;
             stroke: currentColor;
-            opacity: 0.5;
-            transition: transform 0.8s $inOutBack, opacity 0.4s linear,
-                stroke 0.4s ease;
-            transition-delay: 0.1s;
+            transition-delay: 0.15s;
         }
 
         p {
-            opacity: 0.5;
             line-height: 1;
             @extend %fw-600;
-            transition: transform 0.8s $inOutBack, opacity 0.4s linear;
 
             span {
                 font-weight: normal;
                 font-size: 1.4rem;
-                transition: opacity 0.4s linear;
+                transition: opacity 0.4s $outSmooth;
             }
-        }
-    }
-    &__bookmark {
-        --size: 4.2rem;
-        width: var(--size);
-        height: var(--size);
-        @extend %d--grid;
-        place-items: center;
-        border-radius: 0.8em;
-        background: var(--clr_accent_light);
-        z-index: 2;
-
-        &-svgs {
-            @extend %pos-rel;
-            @extend %d--grid;
-            place-items: center;
-        }
-
-        &-svg {
-            will-change: transform, opacity;
-
-            --svg-size: 2.4rem;
-            @extend %pos-abs;
-            height: var(--svg-size);
-            width: var(--svg-size);
-            fill: var(--clr_accent);
-            z-index: 1;
-            transition: transform 0.5s $outSmooth, opacity 0.5s $outSmooth;
-
-            &--outline {
-                @extend %opacity-1;
-                transform: scale(1);
-            }
-            &--filled {
-                @extend %opacity-0;
-                transform: scale(0.4);
-            }
-        }
-
-        &:hover,
-        &:focus {
-            .recipecard__bookmark-svg--outline {
-                @extend %opacity-0;
-                transform: scale(0);
-            }
-            .recipecard__bookmark-svg--filled {
-                @extend %opacity-1;
-                transform: scale(1);
-            }
-        }
-
-        &--saved {
-            @extend .recipecard__bookmark, :hover;
-            transition: transform 0.5s $outSmooth, opacity 0.5s $outSmooth;
         }
     }
 }
